Lighthouse: Image elements do not have [alt] attributes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,11 +54,11 @@ layout: compress
 
     <div class="mob-menu__btn-wrap">
       <div class="mob-menu__btn-open js-swiper-mob-menu-open">
-        <img class="mob-menu__icon-hamburger" src="{{ site.baseurl }}/assets/img/svg-icons/menu.svg">
+        <img class="mob-menu__icon-hamburger" src="{{ site.baseurl }}/assets/img/svg-icons/menu.svg" alt="Menu Icon">
       </div>
 
       <div class="mob-menu__btn-close js-swiper-mob-menu-close">
-        <img class="mob-menu__icon-close" src="{{ site.baseurl }}/assets/img/svg-icons/close.svg">
+        <img class="mob-menu__icon-close" src="{{ site.baseurl }}/assets/img/svg-icons/close.svg" alt="Close Icon">
       </div>
     </div>
 
