--- a/_components/MenuSocial/styles.scss
+++ b/_components/MenuSocial/styles.scss
@@ -27,9 +27,11 @@
     transform: translate3d(-50%,-100%,0);
     transition: opacity .2s ease;
     opacity: 0;
+    visibility: hidden;
 
     .menu-social__link:hover & {
       opacity: 1;
+      visibility: visible;
     }
   }
 }
