--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -28,5 +28,6 @@
 @import '_components/SVG/deco-triangle';
 @import '_components/IframeSize/styles';
 @import '_components/BlockFooter/styles';
+@import '_components/MenuMain/styles';
 @import '_components/MenuSocial/styles';
 @import '_components/BlockMobMenu/styles';
