rework popular -> new

--- a/_components/ReleaseListSwiper/styles.scss
+++ b/_components/ReleaseListSwiper/styles.scss
@@ -145,11 +145,11 @@
       }
 
       &-coming-soon {
-        background-color: forestgreen;
+        background-color: #008b00;
       }
 
-      &-popular {
-        background-color: red;
+      &-new {
+        background-color: #ef0000;
       }
     }
   }
