--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -19,6 +19,7 @@
 @import '_components/BlockAbout/styles';
 @import '_components/BlockDonate/styles';
 @import '_components/ReleaseListSwiper/styles';
+@import '_components/ReleaseListSwiperItem/styles';
 @import '_components/PageRelease/styles';
 @import '_components/PageRelease/page-release-content';
 @import '_components/PageArtist/styles';
