--- a/_components/ReleaseListSwiper/styles.scss
+++ b/_components/ReleaseListSwiper/styles.scss
@@ -22,8 +22,8 @@
 
   &__container {
     overflow: visible;
-    padding-top: 10px;
-    padding-bottom: 13px;
+    // padding-top: 10px;
+    padding-bottom: 11px;
     @include unvisible;
   }
 
