--- a/_components/ReleaseListSwiperItem/styles.scss
+++ b/_components/ReleaseListSwiperItem/styles.scss
@@ -1,17 +1,39 @@
 .release-list-swiper-item {
   position: relative;
   width: 90px;
+  box-sizing: border-box;
+  padding: 0 3px;
 
   @include media(M) {
     width: 180px;
   }
 
+  &__link {
+    // &--hover {
+    // }
+  }
+
   &__wrapper {
     position: relative;
-    margin: 0 15px;
+    border-radius: 8px;
+    width: 70px;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto 8px;
+    transition: background-color .2s ease-in-out;
 
     @include media(M) {
-      margin: 0 30px;
+      width: 140px;
+      height: 140px;
+    }
+
+    // .release-list-swiper-item__link--hover &,
+    .release-list-swiper-item__link:hover &,
+    .release-list-swiper-item.is-hovered &,
+    .release-list-swiper-item.is-selected & {
+      background-color: rgba(#fff,.3);
     }
   }
 
@@ -38,22 +60,14 @@
   &__coming {
     color: rgba(#fff,.5);
     font-size: 8px;
-    // position: absolute;
-    // top: 0;
-    // left: 0;
-    // width: 100%;
-    // height: 100%;
-    // overflow: hidden;
     padding: .6em 1.2em;
     text-align: left;
-    // z-index: 30;
     box-sizing: border-box;
 
     @include media(M) {
       font-size: 10px;
     }
   }
-
 
   &__title {
     color: #fff;
@@ -67,14 +81,16 @@
 
   &__status {
     position: absolute;
-    top: -10px;
+    top: -5px;
+    right: -5px;
     font-size: 8px;
     z-index: 40;
     padding: .2em .8em;
     border-radius: 0 8px 0 8px;
-    right: -10px;
 
     @include media(M) {
+      top: 0;
+      right: 0;
       font-size: 10px;
     }
 
