add manifest.json :maple_leaf:

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@ layout: compress
   <link rel="shortcut icon" href="https://content.sentimony.com/assets/img/favicons/sentimony/favicon-32.png">
   <link rel="apple-touch-icon" href="https://content.sentimony.com/assets/img/favicons/sentimony/favicon-144.png">
   <link rel="canonical" href="{{ site.canonicalurl }}{{ page.url }}" />
+  <link rel="manifest" href="{{ site.baseurl }}/manifest.json">
 </head>
 <body>
 
