--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,9 +72,6 @@ layout: compress
   {% endcomment %}
 
   {% comment %}
-  <!-- firebase.js -->
-  <div id="app" style="font-size: 6px; background-color: #000;"></div>
-
   <script src="https://www.gstatic.com/firebasejs/3.7.3/firebase.js"></script>
   <script>
     var config = {
@@ -90,7 +87,10 @@ layout: compress
     var dbRef = firebase.database().ref().child('releases').child('irukanji-z-lisu').child('title');
     dbRef.on('value', snap => app.innerText = snap.val());
   </script>
+  <div id="app" style="font-size:6px;background-color:#000"></div>
+  {% endcomment %}
 
+  {% comment %}
   {% if site.env == 'prod' %}
     {% include Analytics/google-analytics.html %}
     {% include Analytics/yandex-metrika.html %}
