create GoodShare component

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -22,6 +22,7 @@
 @import '_components/ReleaseListSwiperItem/styles';
 @import '_components/PageRelease/styles';
 @import '_components/PageRelease/page-release-content';
+@import '_components/GoodShare/styles';
 @import '_components/PageArtist/styles';
 @import '_components/PageArtist/photo-cover';
 @import '_components/PageArtist/facebook-widget';
