--- a/_components/GoodShare/styles.scss
+++ b/_components/GoodShare/styles.scss
@@ -1,37 +1,36 @@
-.good-share {
-  // display: none;
+// .good-share {
 
-  &__list {
-    display: flex;
-  }
+//   &__list {
+//     display: flex;
+//   }
 
-  &__btn-facebook {
-    @extend .btn-social;
-    background-color: #3c5a95;
-  }
+//   &__btn-facebook {
+//     @extend .btn-social;
+//     background-color: #3c5a95;
+//   }
 
-  &__btn-vkontakte {
-    @extend .btn-social;
-    background-color: #1074b1;
-  }
+//   &__btn-vkontakte {
+//     @extend .btn-social;
+//     background-color: #1074b1;
+//   }
 
-  &__btn-googleplus {
-    @extend .btn-social;
-    background-color: #dd4c3b;
-  }
+//   &__btn-googleplus {
+//     @extend .btn-social;
+//     background-color: #dd4c3b;
+//   }
 
-  &__btn-twitter {
-    @extend .btn-social;
-    background-color: #20a7c6;
-  }
+//   &__btn-twitter {
+//     @extend .btn-social;
+//     background-color: #20a7c6;
+//   }
 
-  &__btn-icon {
-    display: block;
-    max-height: 2em;
-    margin: 0 auto;
-  }
+//   &__btn-icon {
+//     display: block;
+//     max-height: 2em;
+//     margin: 0 auto;
+//   }
 
-  &__btn-counter {
-    margin-left: .6em;
-  }
-}
+//   &__btn-counter {
+//     margin-left: .6em;
+//   }
+// }
