--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -8,6 +8,7 @@
 
 @import 'ui/variables';
 @import 'ui/base';
+@import 'ui/selection-color';
 @import 'ui/flex-sticky';
 @import 'ui/buttons';
 @import 'ui/unvisible';
