--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@ layout: compress
   <script>
   if ("serviceWorker" in navigator) { 
     window.addEventListener("load", function() {   
-      navigator.serviceWorker.register("/assets/js/sw/sw.js").then(
+      navigator.serviceWorker.register("./assets/js/sw/sw.js").then(
         function(registration) { 
           console.log("ServiceWorker registration successful with scope: ", registration.scope); }, 
         function(err) { 
