--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,20 @@ layout: compress
   <link rel="apple-touch-icon" href="https://content.sentimony.com/assets/img/favicons/sentimony/favicon-144.png">
   <link rel="canonical" href="{{ site.canonicalurl }}{{ page.url }}" />
   <link rel="manifest" href="{{ site.baseurl }}/manifest.json">
+
+  <script>
+  if ("serviceWorker" in navigator) {
+    window.addEventListener("load", function() {
+      navigator.serviceWorker.register("/sw.js").then(
+        function(registration) {
+          console.log("ServiceWorker registration successful with scope: ", registration.scope); },
+        function(err) {
+          console.log("ServiceWorker registration failed: ", err); 
+        });
+
+    });
+  }
+  </script>
 </head>
 <body>
 
