--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,17 +7,23 @@ layout: compress
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
+
+  <link rel="manifest" href="{{ site.baseurl }}/manifest.json">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, shrink-to-fit=no">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="msapplication-starturl" content="/">
 
   <title>{% if page.title %}{{ page.title }} · {% endif %}Sentimony Records{% if page.titleAfter %} · {{ page.titleAfter }}{% endif %}</title>
   <meta name="description" content="{% if page.category == 'releases' %}{{ page.tracks_no }} tracks {{ page.style }} {{ page.format }}, {{ page.date | date: '%Y' }}{% else %}{{ page.description }}{% endif %}">
   <meta property="og:image" content="{% if page.category == 'releases' %}{% if page.cover %}https://content.sentimony.com/assets/img/releases/og-images/{{ page.cat_no }}/{{ page.slug }}.jpg{% else %}https://content.sentimony.com/assets/img/og-images/sentimony/home.jpg{% endif %}{% else %}{{ page.og-image }}{% endif %}">
 
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
-  <link rel="shortcut icon" href="https://content.sentimony.com/assets/img/favicons/sentimony/favicon-32.png">
-  <link rel="apple-touch-icon" href="https://content.sentimony.com/assets/img/favicons/sentimony/favicon-144.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/assets/img/favicons/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="{{ site.baseurl }}/assets/img/favicons/favicon-32.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/assets/img/favicons/favicon-144.png">
   <link rel="canonical" href="{{ site.canonicalurl }}{{ page.url }}" />
-  <link rel="manifest" href="{{ site.baseurl }}/manifest.json">
+  <meta name="theme-color" content="black">
 
   <script>
   if ("serviceWorker" in navigator) {
