--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@ layout: compress
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <link rel="manifest" href="{{ site.baseurl }}/manifest.json">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="msapplication-starturl" content="/">
@@ -23,7 +23,7 @@ layout: compress
   <link rel="icon" type="image/png" sizes="192x192" href="{{ site.baseurl }}/assets/img/favicons/favicon-32.png">
   <link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/assets/img/favicons/favicon-144.png">
   <link rel="canonical" href="{{ site.canonicalurl }}{{ page.url }}" />
-  <meta name="theme-color" content="black">
+  <meta name="theme-color" content="#f1f1f1">
 
   <script>
   if ("serviceWorker" in navigator) {
@@ -34,7 +34,6 @@ layout: compress
         function(err) {
           console.log("ServiceWorker registration failed: ", err); 
         });
-
     });
   }
   </script>
@@ -77,7 +76,6 @@ layout: compress
       <div class="mob-menu__btn-open js-swiper-mob-menu-open">
         <img class="mob-menu__icon-hamburger" src="{{ site.baseurl }}/assets/img/svg-icons/menu.svg" alt="Menu Icon">
       </div>
-
       <div class="mob-menu__btn-close js-swiper-mob-menu-close">
         <img class="mob-menu__icon-close" src="{{ site.baseurl }}/assets/img/svg-icons/close.svg" alt="Close Icon">
       </div>
