--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,13 +60,13 @@ layout: compress
 
       <div class="mob-menu__mob-menu swiper-slide">
         <ul class="mob-menu__mob-menu-ul">
-          <li><a href="{{ site.baseurl }}/" class="">Home</a></li>
-          <li><a href="{{ site.baseurl }}/news/" class="">News</a></li>
-          <li><a href="{{ site.baseurl }}/releases/" class="">Releases</a></li>
-          <li><a href="{{ site.baseurl }}/artists/" class="">Artists</a></li>
-          <li><a href="{{ site.baseurl }}/events/" class="">Events</a></li>
-          <li><a href="{{ site.baseurl }}/friends/" class="">Friends</a></li>
-          <li><a href="{{ site.baseurl }}/contacts/" class="">Contacts</a></li>
+          <li><a href="{{ site.baseurl }}/" class="mob-menu__mob-menu-link">Home</a></li>
+          <li><a href="{{ site.baseurl }}/news/" class="mob-menu__mob-menu-link">News</a></li>
+          <li><a href="{{ site.baseurl }}/releases/" class="mob-menu__mob-menu-link">Releases</a></li>
+          <li><a href="{{ site.baseurl }}/artists/" class="mob-menu__mob-menu-link">Artists</a></li>
+          <li><a href="{{ site.baseurl }}/events/" class="mob-menu__mob-menu-link">Events</a></li>
+          <li><a href="{{ site.baseurl }}/friends/" class="mob-menu__mob-menu-link">Friends</a></li>
+          <li><a href="{{ site.baseurl }}/contacts/" class="mob-menu__mob-menu-link">Contacts</a></li>
         </ul>
       </div>
 
