--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,7 +112,7 @@ layout: compress
   {% include Analytics/google-analytics.html %}
   {% include Analytics/yandex-metrika.html %}
 
-  <script async src="{{ site.baseurl }}/assets/js/base.bundle.min.js"></script>
+  <script async src="{{ site.baseurl }}/assets/js/base.bundle.min.js" charset="utf-8"></script>
 
 </body>
 </html>
