add menu-social.vue :v:

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,7 @@ layout: compress
   </script>
 </head>
 <body>
+<div id="app">
 
   <div class="swiper-container js-swiper-mob-menu">
     <div class="swiper-wrapper">
@@ -114,5 +115,6 @@ layout: compress
 
   <script async src="{{ site.baseurl }}/assets/js/base.bundle.min.js" charset="utf-8"></script>
 
+</div>
 </body>
 </html>
