--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@ layout: compress
 </head>
 <body>
 <div id="app">
+  {% include BaseBg/index.html %}
 
   <div class="swiper-container js-swiper-mob-menu">
     <div class="swiper-wrapper">
