--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -14,6 +14,7 @@
 @import 'ui/unvisible';
 @import 'ui/vue-tabs-customize';
 
+@import '_components/BaseBg/styles';
 @import '_components/BlockMainMenu/styles';
 @import '_components/BlockLogolink/styles';
 @import '_components/BlockHero/styles';
