--- a/_components/BlockFooter/styles.scss
+++ b/_components/BlockFooter/styles.scss
@@ -3,6 +3,7 @@
   background-color: #000;
   font-size: 12px;
   color: rgba(#fff,.5);
+  position: relative;
 
   // &__labels {
   //   margin: 0 auto 10px;
