--- a/_scss/ui/_base.scss
+++ b/_scss/ui/_base.scss
@@ -8,7 +8,6 @@ html {
 
 body {
   margin: 0;
-  background-color: #8f0100;
   font: 400 15px/1.5 'Montserrat', sans-serif;
   color: #fff;
   -webkit-font-smoothing: antialiased;
@@ -17,15 +16,16 @@ body {
   height: 100%;
   text-align: center;
   min-width: $XS;
-  background-image:  url(https://scontent-frx5-1.xx.fbcdn.net/v/t31.0-8/18920951_1588883001121867_3706755512831221570_o.jpg?oh=e749332b8cc880263e33b057146c8afd&oe=59B557DA);
-  background-attachment: scroll;
-  background-size: cover;
-  background-position: center;
+  background-color: #8f0100;
+  // background-image: url(https://scontent-frx5-1.xx.fbcdn.net/v/t31.0-8/18920951_1588883001121867_3706755512831221570_o.jpg?oh=e749332b8cc880263e33b057146c8afd&oe=59B557DA);
+  // background-attachment: scroll;
+  // background-size: cover;
+  // background-position: center;
 
-  @include media(L) {
-    background-image:  url(https://content.sentimony.com/assets/img/backgrounds/sombrero-red.jpg);
-    background-attachment: fixed;
-  }
+  // @include media(L) {
+  //   background-image: url(https://content.sentimony.com/assets/img/backgrounds/sombrero-red.jpg);
+  //   background-attachment: fixed;
+  // }
 }
 
 // .main-wrapper {
