rename: BlockDonate -> Donate

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@ layout: compress
           </div>
           <div class="flex-sticky__content">
             {{ content }}
-            {% include BlockDonate/index.html %}
+            {% include Donate/index.html %}
           </div>
           <div class="flex-sticky__footer">
             {% include BlockFooter/index.html %}
