rename: BlockFooter -> Footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@ layout: compress
             {% include Donate/index.html %}
           </div>
           <div class="flex-sticky__footer">
-            {% include BlockFooter/index.html %}
+            {% include Footer/index.html %}
           </div>
         </div>
       </div>
