rename: Logolink, Hero & About components

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -16,9 +16,9 @@
 
 @import '_components/BaseBg/styles';
 @import '_components/MainMenu/styles';
-@import '_components/BlockLogolink/styles';
-@import '_components/BlockHero/styles';
-@import '_components/BlockAbout/styles';
+@import '_components/Logolink/styles';
+@import '_components/Hero/styles';
+@import '_components/About/styles';
 @import '_components/Donate/styles';
 @import '_components/ReleaseListSwiper/styles';
 @import '_components/ReleaseListSwiperItem/styles';
