rename: MainMenu -> Header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@ layout: compress
       <div class="swiper-slide">
         <div class="flex-sticky">
           <div class="flex-sticky__header">
-            {% include MainMenu/index.html %}
+            {% include Header/index.html %}
           </div>
           <div class="flex-sticky__content">
             {{ content }}
