--- a/_components/Hero/styles.scss
+++ b/_components/Hero/styles.scss
@@ -38,7 +38,7 @@
     }
   }
 
-  &__subtitle {
+  &__description {
     font-family: 'Julius Sans One', sans-serif;
     color: #fff;
     margin: 0 0 8em;
