rework Donate component via VueJS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@ layout: compress
           </div>
           <div class="flex-sticky__content">
             {{ content }}
-            {% include Donate/index.html %}
+            <donate></donate>
           </div>
           <div class="flex-sticky__footer">
             {% include Footer/index.html %}
