rename: SiteHeader -> Headr

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@ layout: compress
       <div class="swiper-slide">
         <div class="flex-sticky">
           <div class="flex-sticky__header">
-            <site-header></site-header>
+            <headr></headr>
           </div>
           <div class="flex-sticky__content">
             {{ content }}
