sticky footer hotfix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@ layout: compress
 <div id="app">
   {% include BaseBg/index.html %}
 
-  <div class="swiper-container js-swiper-menu-mobile">
+  <div class="swiper-container js-swiper-menu-mobile" style="height:100%">
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
