--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,10 +39,10 @@ layout: compress
   </script>
 </head>
 <body>
-<div id="app">
+<div id="app" style="min-height:100%">
   <base-bg></base-bg>
 
-  <div class="swiper-container js-swiper-menu-mobile" style="height:100%">
+  <div class="swiper-container js-swiper-menu-mobile" style="position:absolute;width:100%;height:100%;overflow-y:scroll">
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
