rework Footr component via VueJS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@ layout: compress
           </div>
           <div class="flex-sticky__footer">
             <donate></donate>
-            {% include Footer/index.html %}
+            <footr></footr>
           </div>
         </div>
       </div>
