rework Contacts page via VueJS

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -4,6 +4,7 @@
 @import '../node_modules/coriolan-ui/mixins/ratio';
 @import '../node_modules/coriolan-ui/mixins/clearfix';
 @import '../node_modules/swiper/dist/css/swiper';
+// @import '../node_modules/vue-nav-tabs/src/assets/tabs';
 @import 'vendor/svg-icons/svg-icons';
 
 @import 'ui/variables';
