!!! :fire: delete swiper MenuMobile :fire: cleaning

--- a/_components/Headr/styles.scss
+++ b/_components/Headr/styles.scss
@@ -40,9 +40,8 @@
 
   &__social-menu {
     display: none;
-    // margin-right: 54px;
 
-    @include media(M) {
+    @include media(S) {
       display: flex;
     }
 
@@ -65,19 +64,19 @@
     }
   }
 
-  // &__mob-menu-button {
-  //   display: block;
-  //   padding: 1em 1.1em;
+  &__mob-menu-button {
+    display: block;
+    padding: 1.063em;
 
-  //   @include media(M) {
-  //     display: none;
-  //   }
+    @include media(M) {
+      display: none;
+    }
 
-  //   &-img {
-  //     display: block;
-  //     width: auto;
-  //     height: 20px;
-  //     margin: 0 auto;
-  //   }
-  // }
+    &-img {
+      display: block;
+      width: auto;
+      height: 20px;
+      margin: 0 auto;
+    }
+  }
 }
