--- a/_layouts/page-artist.html
+++ b/_layouts/page-artist.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 
-{% include ReleaseListSwiper/index.html class='js-release-list-swiper--release-page' %}
+{% include SwiperArtistList/index.html class='js-swiper-artist-list--artist-page' %}
 {% include PageArtist/index.html %}
