rename SwiperReleaseList :elephant:

--- a/_layouts/page-release.html
+++ b/_layouts/page-release.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 
-{% include ReleaseListSwiper/index.html class='js-release-list-swiper--release-page' %}
+{% include SwiperReleaseList/index.html class='js-swiper-release-list--release-page' %}
 {% include PageRelease/index.html %}
