--- a/_components/Headr/styles.scss
+++ b/_components/Headr/styles.scss
@@ -14,18 +14,6 @@
     align-items: center;
   }
 
-  a {
-    font-size: 16px;
-    color: #fff;
-    border-radius: 6px;
-    transition: background-color .2s ease-in-out;
-
-    &:hover,
-    &.is-selected {
-      background-color: $colorBgLight;
-    }
-  }
-
   &__main-menu {
     display: none;
 
@@ -35,10 +23,19 @@
 
     &-link {
       padding: 1em 1.8em;
-      margin-left: .5em;
+      font-size: 16px;
+      color: #fff;
+      border-radius: 6px;
+      transition: background-color .2s ease-in-out;
+      margin-left: .2em;
 
       &:first-child {
         margin-left: 0;
+      }
+
+      // &.is-selected,
+      &:hover {
+        background-color: $colorBgLight;
       }
     }
   }
@@ -55,6 +52,7 @@
       color: #fff;
       padding: .938em;
       box-sizing: border-box;
+      @extend .headr__main-menu-link;
 
       &-img {
         display: block;
