--- a/_layouts/spa-default.html
+++ b/_layouts/spa-default.html
@@ -51,7 +51,7 @@ layout: compress
         </div>
         <div class="flex-sticky__footer">
           <donate></donate>
-          <spa-footr></spa-footr>
+          <footr></footr>
         </div>
       </div>
 
