rework Events page via VueJS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,7 @@ layout: compress
           <headr></headr>
         </div>
         <div class="flex-sticky__content">
+          <router-view></router-view>
           {{ content }}
         </div>
         <div class="flex-sticky__footer">
