create more SPA pages, global rework :elephant:

--- a/_layouts/page-release.html
+++ b/_layouts/page-release.html
@@ -3,4 +3,4 @@ layout: default
 ---
 
 {% include SwiperReleaseList/index.html class='js-swiper-release-list--release-page' %}
-{% include PageRelease/index.html %}
+{% include ReleasePage/index.html %}
