--- a/_layouts/page-artist.html
+++ b/_layouts/page-artist.html
@@ -3,4 +3,4 @@ layout: default
 ---
 
 {% include SwiperArtistList/index.html class='js-swiper-artist-list--artist-page' %}
-{% include PageArtist/index.html %}
+{% include ArtistPage/index.html %}
