--- a/_scss/ui/_base.scss
+++ b/_scss/ui/_base.scss
@@ -16,7 +16,7 @@ body {
   height: 100%;
   text-align: center;
   min-width: $XS;
-  background-color: #8f0100;
+  background-color: #8a0202;
 }
 
 h1, h2, h3, h4, h5, h6, p {
