--- a/_layouts/page-artist.html
+++ b/_layouts/page-artist.html
@@ -2,5 +2,7 @@
 layout: default
 ---
 
-{% include SwiperArtistList/index.html class='js-swiper-artist-list--artist-page' %}
+{% include SwiperArtistList/swiper-artist-list.html class='js-swiper-artist-list--artist-page' %}
 {% include ArtistPage/index.html %}
+{% comment %}
+{% endcomment %}
