--- a/_layouts/page-release.html
+++ b/_layouts/page-release.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 
-{% include SwiperReleaseList/index.html class='js-swiper-release-list--release-page' %}
+{% include SwiperReleaseList/swiper-release-list.html class='js-swiper-release-list--release-page' %}
 {% include ReleasePage/index.html %}
