replace menu-temporary component

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@ layout: compress
       <div class="flex-sticky">
         <div class="flex-sticky__header">
           <headr></headr>
+          <menu-temporary></menu-temporary>
         </div>
         <div class="flex-sticky__content">
           <router-view></router-view>
