add Google Music links

--- a/_components/ReleasePage/styles.scss
+++ b/_components/ReleasePage/styles.scss
@@ -115,6 +115,7 @@
 
   &__bandcamp-btn,
   &__applemusic-btn,
+  &__googlemusic-btn,
   &__junodownload-btn {
     @extend .btn;
     margin-top: .5em;
