add swiper into artist and release pages

--- a/_layouts/page-release.html
+++ b/_layouts/page-release.html
@@ -2,5 +2,8 @@
 layout: default
 ---
 
+{% comment %}
+<swiper-release-list></swiper-release-list>
+{% endcomment %}
 {% include SwiperReleaseList/swiper-release-list.html class='js-swiper-release-list--release-page' %}
 {% include ReleasePage/index.html %}
