--- a/_layouts/page-artist.html
+++ b/_layouts/page-artist.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 
+{% comment %}
+<swiper-artist-list></swiper-artist-list>
+{% endcomment %}
 {% include SwiperArtistList/swiper-artist-list.html class='js-swiper-artist-list--artist-page' %}
 {% include ArtistPage/index.html %}
 {% comment %}
