add at home more vue components

--- a/_layouts/page-artist.html
+++ b/_layouts/page-artist.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 {% comment %}
-<swiper-artist-list></swiper-artist-list>
+<swiper-artist-list modificator="js-swiper-artist-list--artist-page"></swiper-artist-list>
 {% endcomment %}
 {% include SwiperArtistList/swiper-artist-list.html class='js-swiper-artist-list--artist-page' %}
 {% include ArtistPage/index.html %}
