--- a/_layouts/page-release.html
+++ b/_layouts/page-release.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 {% comment %}
-<swiper-release-list></swiper-release-list>
+<swiper-release-list modificator="js-swiper-release-list--release-page"></swiper-release-list>
 {% endcomment %}
 {% include SwiperReleaseList/swiper-release-list.html class='js-swiper-release-list--release-page' %}
 {% include ReleasePage/index.html %}
