--- a/_components/Headr/styles.scss
+++ b/_components/Headr/styles.scss
@@ -33,7 +33,7 @@
         margin-left: 0;
       }
 
-      // &.is-selected,
+      &.is-selected,
       &:hover {
         background-color: $colorBgLight;
       }
